--- a/GreenLine/Storyboards/Main.storyboard
+++ b/GreenLine/Storyboards/Main.storyboard
@@ -1077,11 +1077,11 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6go-ua-dAY">
                                         <rect key="frame" x="0.0" y="420.5" width="414" height="475.5"/>
                                         <subviews>
-                                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GBT-ki-83v">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GBT-ki-83v">
                                                 <rect key="frame" x="0.0" y="16" width="414" height="459.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScheduleTableViewCell" rowHeight="86" id="rq1-7j-n2c" customClass="ScheduleTableViewCell" customModule="GreenLine" customModuleProvider="target">
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyScheduleTableViewCell" rowHeight="86" id="rq1-7j-n2c" customClass="MyScheduleTableViewCell" customModule="GreenLine" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="44.5" width="414" height="86"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rq1-7j-n2c" id="EQ0-hC-U9B">
@@ -1170,12 +1170,12 @@
                                                             </constraints>
                                                         </tableViewCellContentView>
                                                         <connections>
-                                                            <outlet property="cellBGView" destination="kmi-ey-amu" id="1ka-Ti-ab7"/>
-                                                            <outlet property="countLabel" destination="jlJ-Fo-GQH" id="DrO-Th-iWY"/>
-                                                            <outlet property="locationTitleLabel" destination="5T8-r7-bNq" id="aLu-dg-9IJ"/>
-                                                            <outlet property="roundGreenView" destination="bOY-Xo-BiB" id="KV6-0L-z3D"/>
-                                                            <outlet property="roundWhiteView" destination="Doa-m9-ZeF" id="F3d-L6-lae"/>
-                                                            <outlet property="shiftAllocatedLabel" destination="pOR-mi-wmC" id="doA-U5-l9i"/>
+                                                            <outlet property="cellBGView" destination="kmi-ey-amu" id="gJF-0I-NeH"/>
+                                                            <outlet property="countLabel" destination="jlJ-Fo-GQH" id="yda-g2-dvW"/>
+                                                            <outlet property="locationTitleLabel" destination="5T8-r7-bNq" id="ikh-qJ-PLR"/>
+                                                            <outlet property="roundGreenView" destination="bOY-Xo-BiB" id="fSX-U4-1cv"/>
+                                                            <outlet property="roundWhiteView" destination="Doa-m9-ZeF" id="Y71-Cr-9DJ"/>
+                                                            <outlet property="shiftAllocatedLabel" destination="pOR-mi-wmC" id="Q3i-xJ-bts"/>
                                                         </connections>
                                                     </tableViewCell>
                                                 </prototypes>
